--- a/usersguide/build.xml
+++ b/usersguide/build.xml
@@ -70,8 +70,12 @@ Microsystems, Inc. All Rights Reserved.
   <target name="javahelp">
     <mkdir dir="javahelp/org/netbeans/modules/usersguide/JavaHelpSearch2"/>
     <jhindexer basedir="javahelp/org/netbeans/modules/usersguide"
-               db="javahelp/org/netbeans/modules/usersguide/JavaHelpSearch2"
-               jhall="../nbbuild/external/jhall-1.1.2_02.jar">
+               db="javahelp/org/netbeans/modules/usersguide/JavaHelpSearch2">
+      <classpath>
+        <fileset dir="../nbbuild/external">
+          <include name="jhall*.jar"/>
+        </fileset>
+      </classpath>
       <include name="**/*.html"/>
       <exclude name="credits.html"/>
       <exclude name="ant/credits.html"/>
