--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -1,6 +1,7 @@
 netbeans.dest=netbeans
 test.user.dir=testuserdir
-tryme.args.additional=
+# Options to pass to NetBeans when starting it with "ant tryme":
+tryme.args=
 build.compiler.debug=on
 
 # Additional parameters to pass to NetBeans as it is started.
