<typedef>s and <description>s can occur beneath <project>.

--- a/o.apache.tools.ant.module/src/org/apache/tools/ant/module/nodes/Bundle.properties
+++ b/o.apache.tools.ant.module/src/org/apache/tools/ant/module/nodes/Bundle.properties
@@ -27,6 +27,7 @@ HINT_project_properties=Properties loaded from an ant.properties file. Click ...
 # AntProjectChildren
 # {0} - element name
 LBL_unknown_datatype=Unknown datatype <{0}/>
+LBL_description_element=Description of this project file.
 
 # AntProjectNode
 # {0} - project name
@@ -38,6 +39,7 @@ MSG_property_value_changeme=somevalue
 MSG_taskdef_name_changeme=changeme
 MSG_taskdef_classname_changeme=some.package.and.Class
 MSG_id_changeme=changeme
+MSG_description_changeme=Change me...
 # {0} - display name of property
 EXC_no_default_value_for_prop=You cannot remove the attribute {0}, it is mandatory.
 MSG_defaulttarget_missing=<default target missing>
