--- a/javahelp/build.xml
+++ b/javahelp/build.xml
@@ -26,20 +26,19 @@ Microsystems, Inc. All Rights Reserved.
 
     <target name="init">
         <ant dir="../external" target="unscramble"/>
+        <path id="cp">
+            <pathelement location="../../openide/openide-13javac-workaround.jar"/>
+            <pathelement location="../../openide/netbeans/lib/openide.jar"/>
+            <fileset dir="../external">
+                <include name="xml-apis*.jar"/>
+                <include name="jh*.jar"/>
+            </fileset>
+        </path>
     </target>
 
     <target name="compile" depends="init">
         <javac srcdir="src" destdir="src" deprecation="${build.compiler.deprecation}" debug="${build.compiler.debug}">
-            <classpath>
-                <pathelement location="../../openide/openide-13javac-workaround.jar"/>
-                <fileset dir="../../openide/netbeans/lib">
-                    <include name="openide*.jar" />
-                </fileset>
-                <fileset dir="../external">
-                    <include name="xml-apis*.jar"/>
-                    <include name="jh*.jar"/>
-                </fileset>
-            </classpath>
+            <classpath refid="cp"/>
         </javac>
     </target>
 
@@ -85,7 +84,7 @@ Microsystems, Inc. All Rights Reserved.
         </makenbm>
     </target>
 
-    <target name="test-build" depends="jars">
+    <target name="reload-build" depends="jars">
         <mkdir dir="reload/ext"/>
         <copy file="netbeans/modules/autoload/javahelp-api.jar" tofile="reload/javahelp-api.jar"/>
         <copy todir="reload/ext">
@@ -94,7 +93,7 @@ Microsystems, Inc. All Rights Reserved.
             </fileset>
         </copy>
     </target>
-    <target name="test" depends="test-build" description="Try reloading.">
+    <target name="reload" depends="reload-build" description="Try reloading.">
         <nbinstaller module="reload/javahelp-api.jar" action="reinstall"/>
     </target>
 
@@ -108,10 +107,6 @@ Microsystems, Inc. All Rights Reserved.
         <delete file="javahelp-api.nbm"/>
         <delete dir="Info"/>
         <delete dir="javadoc"/>
-        <delete dir="JavahelpAPIs"/>
-        <delete file="JavahelpAPIs.zip"/>
-        <delete dir="JavaHelpAPIs"/>
-        <delete file="JavaHelpAPIs.zip"/>
         <delete file="manifest-subst.mf"/>
     </target>
 
@@ -119,53 +114,16 @@ Microsystems, Inc. All Rights Reserved.
         <delete dir="reload"/>
     </target>
 
-  <target name="javadoc" depends="javahelp-apis">
-    <copy todir="javadoc">
-      <fileset dir=".">
-        <include name="JavaHelpAPIs/**"/>
-        <include name="JavaHelpAPIs.zip"/>
-      </fileset>
-    </copy>
-  </target>
-
-  <!-- JavaHelp API documentation -->
-  <target name="javahelp-apis" description="Create JavaHelp API documentation.">
-    <property name="jdk-docs-location" value="http://java.sun.com/j2se/1.3/docs/api"/>
-    <property name="openide-docs-location" value="http://www.netbeans.org/download/apis/"/>
-    <property name="openide.package-list.loc" location="${nbroot}/openide/OpenAPIs"/>
-    <echo message="Build JavaHelp API documentation..."/>
-    <delete dir="JavaHelpAPIs"/>
-    <mkdir dir="JavaHelpAPIs"/>
-    <javadoc destdir="JavaHelpAPIs"
-             packagenames="org.netbeans.api.*,org.netbeans.spi.*"
-             doctitle="NetBeans JavaHelp APIs"
-             use="true"
-             splitindex="true"
-             author="false"
-             version="false"
-             maxmemory="64m"
-    >
-      <sourcepath>
-        <pathelement location="src"/>
-      </sourcepath>
-      <classpath>
-        <fileset dir="${nbroot}/openide/netbeans/lib">
-          <include name="openide*.jar" />
-        </fileset>
-        <fileset dir="../external">
-          <include name="jh*.jar"/>
-        </fileset>
-      </classpath>
-      <link href="${jdk-docs-location}"
-            offline="true"
-            packagelistLoc="${nbroot}/openide/api/doc"
-      />
-      <link href="${openide-docs-location}"
-            offline="true"
-            packagelistLoc="${openide.package-list.loc}"
-      />
-    </javadoc>
-    <zip zipfile="JavaHelpAPIs.zip" basedir="JavaHelpAPIs"/>
-  </target>
+    <target name="javadoc" depends="init">
+        <!-- Ant 1.4 bug workaround: <property refid="..."/> does not work inside <ant> -->
+        <property name="_cp" refid="cp"/>
+        <ant dir="../../nbbuild" antfile="template.xml" target="javadoc">
+            <property name="javadoc.base" location="."/>
+            <property name="javadoc.name" value="JavaHelpAPI"/>
+            <property name="javadoc.title" value="JavaHelp API"/>
+            <property name="javadoc.packages" value="org.netbeans.api.javahelp.*"/>
+            <property name="javadoc.classpath" value="${_cp}"/>
+        </ant>
+    </target>
 
 </project>
