--- a/nbbuild/build.properties
+++ b/nbbuild/build.properties
@@ -250,6 +250,7 @@ config.fixedmodules.javadoc=openide, \
         core/settings, \
         diff, \
         java/api, \
+        java/srcmodel, \
         lexer, \
         openidex/looks, \
         mdr, \
