#29130: documentation cleanup - missing links, over-complex build scripts, etc.

--- a/javahelp/build.xml
+++ b/javahelp/build.xml
@@ -121,7 +121,7 @@ Microsystems, Inc. All Rights Reserved.
             <property name="javadoc.base" location="."/>
             <property name="javadoc.name" value="JavaHelpAPI"/>
             <property name="javadoc.title" value="JavaHelp API"/>
-            <property name="javadoc.packages" value="org.netbeans.api.javahelp.*"/>
+            <property name="javadoc.packages" value="org.netbeans.api.javahelp"/>
             <property name="javadoc.classpath" value="${_cp}"/>
         </ant>
     </target>
