--- a/openide.execution/build.xml
+++ b/openide.execution/build.xml
@@ -50,11 +50,11 @@ Microsystems, Inc. All Rights Reserved.
         </locjar>
     </target>
 
-    <target name="netbeans" depends="jars">
+    <target name="netbeans" depends="jars" description="Build everything.">
         <genlist targetname="nbm" outputfiledir="netbeans"/>
     </target>
 
-    <target name="nbm" depends="netbeans">
+    <target name="nbm" depends="netbeans" description="Build NBM.">
         <makenbm file="openide-execution.nbm"
                  topdir="."
                  module="netbeans/modules/autoload/openide-execution.jar"
@@ -65,100 +65,20 @@ Microsystems, Inc. All Rights Reserved.
         </makenbm>
     </target>
   
-    <target name="javadoc-check-timestamps">
-        <uptodate property="javadoc-up-to-date" targetfile="javadoc/ExecutionAPI.zip">
-            <srcfiles dir="src">
-                <include name="org/openide/**/*.java"/>
-            </srcfiles>
-            <srcfiles dir="api/doc">
-                <include name="org/openide/"/>
-            </srcfiles>
-            <srcfiles dir="../api/doc">
-                <include name="*.css"/>
-            </srcfiles>
-        </uptodate>
-    </target>
-    <target name="javadoc" depends="javadoc-check-timestamps" unless="javadoc-up-to-date">
-        <property name="jdk-docs-location" value="http://java.sun.com/j2se/1.4/docs/api"/>
-        <property name="openide-docs-location" value="http://www.netbeans.org/download/dev/javadoc/OpenAPIs"/>
-        <property name="io-docs-location" value="http://www.netbeans.org/download/dev/javadoc/InputOutputAPI"/>
-        <tstamp/>
-        <property name="javadoc-footer" value='&lt;font size="-2" color="gray"&gt;Built on ${TODAY}.&amp;nbsp;&amp;nbsp;|&amp;nbsp;&amp;nbsp;Portions Copyright 1997-2002 Sun Microsystems, Inc. All rights reserved.&lt;/font&gt;'/>
-        <mkdir dir="javadoc/ExecutionAPI"/>
-        <javadoc author="false" destdir="javadoc/ExecutionAPI" stylesheetfile="../api/doc/javadoc.css" windowtitle="NetBeans Execution API" splitindex="true" use="true" version="false">
-            <sourcepath>
-                <pathelement location="api/doc"/>
-                <pathelement location="src"/>
-            </sourcepath>
-            <classpath refid="cp"/>
-            <package name="org.openide.actions"/>
-            <package name="org.openide.cookies"/>
-            <package name="org.openide.execution"/>
-            <package name="org.openide.loaders"/>
-            <group>
-                <title><![CDATA[<a href="@TOP@org/openide/execution/doc-files/api.html">Execution API</a>]]></title>
-                <package name="org.openide.actions"/>
-                <package name="org.openide.cookies"/>
-                <package name="org.openide.execution"/>
-                <package name="org.openide.loaders"/>
-            </group>
-            <link href="${jdk-docs-location}" offline="true" packagelistloc="../api/doc"/>
-            <link href="${openide-docs-location}" offline="true" packagelistloc="../javadoc/OpenAPIs"/>
-            <link href="${io-docs-location}" offline="true" packagelistloc="../io/javadoc/InputOutputAPI"/>
-            <doctitle>NetBeans Execution API</doctitle>
-            <bottom>${javadoc-footer}</bottom>
-        </javadoc>
-        <copy todir="javadoc/ExecutionAPI">
-            <fileset dir="../api/doc">
-                <include name="*.css"/>
-            </fileset>
-        </copy>
-        <replace dir="javadoc/ExecutionAPI">
-            <include name="**/doc-files/*.html"/>
-            <include name="**/package-summary.html"/>
-            <replacefilter token="@JDK@" value="${jdk-docs-location}"/>
-            <replacefilter token="@OPENIDE@" value="${openide-docs-location}"/>
-            <replacefilter token="@IO@" value="${io-docs-location}"/>
-            <replacefilter token="@FOOTER@" value="${javadoc-footer}"/>
-        </replace>
-        <replace dir="javadoc/ExecutionAPI" token="@TOP@" value="">
-            <include name="*.html"/>
-        </replace>
-        <replace dir="javadoc/ExecutionAPI" token="@TOP@" value="../">
-            <include name="*/*.html"/>
-        </replace>
-        <replace dir="javadoc/ExecutionAPI" token="@TOP@" value="../../">
-            <include name="*/*/*.html"/>
-        </replace>
-        <replace dir="javadoc/ExecutionAPI" token="@TOP@" value="../../../">
-            <include name="*/*/*/*.html"/>
-        </replace>
-        <replace dir="javadoc/ExecutionAPI" token="@TOP@" value="../../../../">
-            <include name="*/*/*/*/*.html"/>
-        </replace>
-        <replace dir="javadoc/ExecutionAPI" token="@TOP@" value="../../../../../">
-            <include name="*/*/*/*/*/*.html"/>
-        </replace>
-        <replace dir="javadoc/ExecutionAPI" token="@TOP@" value="../../../../../../">
-            <include name="*/*/*/*/*/*/*.html"/>
-        </replace>
-        <taskdef name="checklinks" classname="org.netbeans.nbbuild.CheckLinks">
-            <classpath>
-                <pathelement location="../../nbbuild/nbantext.jar"/>
-                <fileset dir="../../core/external">
-                    <include name="regexp*.jar"/>
-                </fileset>
-            </classpath>
-        </taskdef>
-        <checklinks basedir="javadoc/ExecutionAPI" checkexternal="false">
-            <include name="overview-summary.html"/>
-            <include name="**/package-summary.html"/>
-            <include name="**/doc-files/**/*.html"/>
-        </checklinks>
-        <zip zipfile="javadoc/ExecutionAPI.zip" basedir="javadoc/ExecutionAPI"/>
+    <target name="javadoc" description="Build Javadoc.">
+        <!-- Ant 1.4 bug workaround: <property refid="..."/> does not work inside <ant> -->
+        <property name="_cp" refid="cp"/>
+        <ant dir="../../nbbuild" antfile="template.xml" target="javadoc">
+            <property name="javadoc.base" location="."/>
+            <property name="javadoc.name" value="ExecutionAPI"/>
+            <property name="javadoc.title" value="Execution API"/>
+            <property name="javadoc.packages" value="org.openide.actions,org.openide.cookies,org.openide.execution,org.openide.loaders"/>
+            <property name="javadoc.classpath" value="${_cp}"/>
+            <property name="javadoc.main.page" value="org/openide/execution/doc-files/api.html"/>
+        </ant>
     </target>
   
-    <target name="clean">
+    <target name="clean" description="Clean everything.">
         <delete>
             <fileset dir="src">
                 <include name="**/*.class"/>
