--- a/javahelp/src/org/netbeans/modules/javahelp/resources/Bundle.properties
+++ b/javahelp/src/org/netbeans/modules/javahelp/resources/Bundle.properties
@@ -9,7 +9,7 @@
 # Code is Sun Microsystems, Inc. Portions Copyright 1997-2002 Sun
 # Microsystems, Inc. All Rights Reserved.
 
-OpenIDE-Module-Name=JavaHelp
+OpenIDE-Module-Name=JavaHelp Integration
 OpenIDE-Module-Display-Category=Infrastructure
 OpenIDE-Module-Short-Description=Permits JavaHelp help sets to be added to the IDE.
 OpenIDE-Module-Long-Description=\
